--- a/libs/jade/dev/psr/step7.jade
+++ b/libs/jade/dev/psr/step7.jade
@@ -19,8 +19,8 @@ block content
             h2 Completed
             p A confirmation email has been sent to you and your form has been submitted to the following companies.
             h4 #[a(href="#") Thames Water] – your water supplier
-            h4 #[a(href="#") Better Energy] – your electricity distributor
-            h4 #[a(href="#") Cooperative Energy] – your electricity supplier            
+            h4 #[a(href="#") Western Power] – your electricity distributor
+            h4 #[a(href="#") Cooperative Energy] – your electricity and gas supplier            
 
         .callout--related
             h3 What happens next
