--- a/libs/modules/side-chat.less
+++ b/libs/modules/side-chat.less
@@ -38,8 +38,8 @@
 	overflow: hidden;
 	box-shadow: 0px 2px 6px rgba(0,66,65,0.4);
 		a {
-			background-color: @green-light;
-			border: solid @green;
+			background-color: @heritage-blue-lightest;
+			border-bottom: 1px solid @heritage-blue;
 			border-width: 2px 2px 0 2px;
 		}
 	&:focus, &:hover, &:active {
