dev: Small fix to bug that was causing the text in the switch column to sit slightly higher

--- a/libs/jade/dev/energy/comparison-4.jade
+++ b/libs/jade/dev/energy/comparison-4.jade
@@ -91,7 +91,7 @@ block script
 				}
 			})
 
-			$(".switch").each(function() {
+			$(".switching").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score <= 49) {
 					$(this).addClass("rate-1").html(1);
@@ -185,7 +185,7 @@ block content
 					td.complaints 40.6
 					td.service 57.89%
 					td.billing 53.78%
-					td.switch 80.94%
+					td.switching 80.94%
 					td.commitment 4
 					td.rating
 						span 3
@@ -196,7 +196,7 @@ block content
 					td.complaints 70.4
 					td.service 67.89%
 					td.billing 56.8%
-					td.switch 100%
+					td.switching 100%
 					td.commitment 4
 					td.rating
 						span 3.25
@@ -207,7 +207,7 @@ block content
 					td.complaints 140.7
 					td.service 92.67%
 					td.billing 82.34%
-					td.switch 74.68%
+					td.switching 74.68%
 					td.commitment 5
 					td.rating
 						span 4
@@ -218,7 +218,7 @@ block content
 					td.complaints 35.7
 					td.service 65.01%
 					td.billing 57.86%
-					td.switch 91.35%
+					td.switching 91.35%
 					td.commitment 0
 					td.rating
 						span 3
@@ -229,7 +229,7 @@ block content
 					td.complaints 80.8
 					td.service 54.67%
 					td.billing 74.67%
-					td.switch 100%
+					td.switching 100%
 					td.commitment 4
 					td.rating
 						span 3.5
@@ -240,7 +240,7 @@ block content
 					td.complaints 405.6
 					td.service 62.2%
 					td.billing 45.67%
-					td.switch 60.54%
+					td.switching 60.54%
 					td.commitment 5
 					td.rating
 						span 2.25
@@ -251,7 +251,7 @@ block content
 					td.complaints 500.6
 					td.service 85.75%
 					td.billing 49.87%
-					td.switch 96.8%
+					td.switching 96.8%
 					td.commitment 0
 					td.rating
 						span 2.5
@@ -262,7 +262,7 @@ block content
 					td.complaints 230.5
 					td.service 51.23%
 					td.billing 45.67%
-					td.switch 77.56%
+					td.switching 77.56%
 					td.commitment 4
 					td.rating
 						span 2.75
@@ -273,7 +273,7 @@ block content
 					td.complaints 700.8
 					td.service 74.79%
 					td.billing 23.47%
-					td.switch 98.7%
+					td.switching 98.7%
 					td.commitment 0
 					td.rating
 						span 2
@@ -284,7 +284,7 @@ block content
 					td.complaints 460
 					td.service 66.05%
 					td.billing 61.2%
-					td.switch 58.97%
+					td.switching 58.97%
 					td.commitment 0
 					td.rating
 						span 2.25
@@ -295,7 +295,7 @@ block content
 					td.complaints 90.4
 					td.service 53.3%
 					td.billing 61.5%
-					td.switch 96.34%
+					td.switching 96.34%
 					td.commitment 4
 					td.rating
 						span 3.25
@@ -306,7 +306,7 @@ block content
 					td.complaints 46.8
 					td.service 76.44%
 					td.billing 25.67%
-					td.switch 54.23%
+					td.switching 54.23%
 					td.commitment 4
 					td.rating
 						span 3.5
@@ -317,7 +317,7 @@ block content
 					td.complaints 330.5
 					td.service 30.56%
 					td.billing 72.3%
-					td.switch 97.89%
+					td.switching 97.89%
 					td.commitment 0
 					td.rating
 						span 2.5
@@ -328,7 +328,7 @@ block content
 					td.complaints 111.2
 					td.service 68.79%
 					td.billing 51.64%
-					td.switch 97.4%
+					td.switching 97.4%
 					td.commitment 0
 					td.rating
 						span 2.5
@@ -339,7 +339,7 @@ block content
 					td.complaints 546.9
 					td.service 42.38%
 					td.billing 80.67%
-					td.switch 82.34%
+					td.switching 82.34%
 					td.commitment 4
 					td.rating
 						span 2.75
@@ -350,7 +350,7 @@ block content
 					td.complaints 55.4
 					td.service 71.23%
 					td.billing 67.56%
-					td.switch 40.21%
+					td.switching 40.21%
 					td.commitment 0
 					td.rating
 						span 3.25
@@ -361,7 +361,7 @@ block content
 					td.complaints 800.7
 					td.service 72.45%
 					td.billing 76.45%
-					td.switch 30.45%
+					td.switching 30.45%
 					td.commitment 0
 					td.rating
 						span 2.75
@@ -371,7 +371,7 @@ block content
 					td.complaints 340.5
 					td.service -
 					td.billing -
-					td.switch -
+					td.switching -
 					td.commitment -
 					td -
 				tr.open-dialog2
@@ -380,7 +380,7 @@ block content
 					td.complaints 375.6
 					td.service -
 					td.billing -
-					td.switch -
+					td.switching -
 					td.commitment 4
 					td -
 				tr.open-dialog2
@@ -389,7 +389,7 @@ block content
 					td.complaints 345.3
 					td.service -
 					td.billing -
-					td.switch -
+					td.switching -
 					td.commitment -
 					td -
 				tr.open-dialog2
@@ -398,7 +398,7 @@ block content
 					td.complaints 950.6
 					td.service -
 					td.billing -
-					td.switch -
+					td.switching -
 					td.commitment -
 					td -
 				tr.open-dialog2
@@ -407,7 +407,7 @@ block content
 					td.complaints -
 					td.service -
 					td.billing -
-					td.switch -
+					td.switching -
 					td.commitment 5
 					td -
 				tr.open-dialog3
