--- a/libs/modules/energy-comparison.less
+++ b/libs/modules/energy-comparison.less
@@ -58,7 +58,7 @@
     .complaints,
     .service,
     .billing,
-    .switch,
+    .switching,
     .commitment {
         display: none;
         @media screen and (min-width: @breakpoint-md) {
