--- a/libs/jade/dev/debt-calculator/debt-calculator-2.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-2.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Repayment calculator for non-priority debts"
+	- var title = "Non-priority debt repayment calculator"
 	- var sidebar = true
 	- var toolbars = true
 	- var mockup = true
