--- a/libs/jade/dev/debt-calculator/debt-calculator.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Repayment calculator for non-priority debts"
+	- var title = "Non-priority debt repayment calculator"
 	- var sidebar = true
 	- var toolbars = true
 	- var mockup = true
@@ -27,5 +27,15 @@ block script
 
 block content
 	.articleContent
-		p Use this calculator to work out how much money to offer each of your non-priority creditors.
+		p Use this calculator to work out exactly how much money to offer each of your non-priority creditors. It only takes a couple of minutes to complete.
+		p Once you start paying these amounts to your creditors, they should stop chasing you for money.
+		p If you’ve received court papers, you’re facing eviction or you’re expecting bailiffs, you should #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice") contact your nearest Citizens Advice].
+		h2 Before you start
+		p Before you start the calculator, you need to know:
+		ul
+			li how much money you have left at the end of each month after essential bills and living costs - use our #[a(href="https://www.citizensadvice.org.uk/debt-and-money/budgeting/budgeting/work-out-your-budget/") budgeting tool] to work this out
+			li how much money you owe each of your non-priority creditors
+		p You’ll get the most accurate results if you use up-to-date figures for your debts. You can use rough figures if you just want a general idea of how much to repay each of your non-priority creditors.
+		p You won’t be able to save your information so make sure you print the results if you want to keep them.
+
 		a.btn.right-button-icon(href="debt-calculator-1.html") Start
