--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -77,7 +77,7 @@ block content
 										br
 										strong Adviser
 							.dl--segment.col-xs-6
-								a(href="http://citaone.logo-net.co.uk/chat18/Chat.php?w=250")
+								a(href="https://www.citizensadvice.org.uk/development/web-chat-service/")
 									.dl--circle
 										.pic.i-brand &#xe92a;
 									p as a
@@ -158,7 +158,7 @@ block content
 									strong Webchat
 						// Mobile webchat
 						.dl--segment.col-sm-4.mobile
-							a(href="http://citaone.logo-net.co.uk/chat18/Chat.php?w=250")
+							a(href="https://www.citizensadvice.org.uk/development/web-chat-service/")
 								.dl--circle
 									.pic.i-brand &#xe92a;
 								p Try out
@@ -208,7 +208,7 @@ block content
 									br
 									strong Money advice recording tool (MART)
 						.dl--segment.col-sm-4.tablet
-							a(href="http://staging.beta.pageengine.net")
+							a(href="http://beta.pageengine.net")
 								.dl--circle
 									.pic.i-brand &#xe96a;
 								p Design with
