dev:change: Updated with new fact check content

--- a/libs/jade/dev/debt-calculator/debt-calculator-1.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-1.jade
@@ -16,7 +16,7 @@ block breadcrumbs
 block content
 	.articleContent
 		.fieldset
-			label(for="field") Money left after essential bills and living costs
+			label(for="field") Money left after essential bills, living costs and debts to priority creditors
 			.field-group.field-group--dropdown
 				input#field(type="number", placeholder="£")
 				.dropdown
