--- a/libs/jade/dev/debt-calculator/debt-calculator.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator.jade
@@ -22,9 +22,10 @@ block content
 		h2 Before you start
 		p Before you start the calculator, you need to know:
 		ul
-			li how much money you have left at the end of each month after essential bills and living costs - use our #[a(href="https://www.citizensadvice.org.uk/debt-and-money/budgeting/budgeting/work-out-your-budget/") budgeting tool] to work this out
+			li how much money you have left at the end of each month after essential bills, living costs and any debts you’re paying back to priority creditors - use our #[a(href="https://www.citizensadvice.org.uk/debt-and-money/budgeting/budgeting/work-out-your-budget/") budgeting tool] to work this out
 			li how much money you owe each of your non-priority creditors
 		p You’ll get the most accurate results if you use up-to-date figures for your debts. You can use rough figures if you just want a general idea of how much to repay each of your non-priority creditors.
-		p You won’t be able to save your information so make sure you print the results if you want to keep them.
+		.callout--alert
+			p You won’t be able to save your information so make sure you print the results if you want to keep them.
 
 		a.btn.right-button-icon(href="debt-calculator-1.html") Start
