--- a/libs/modules/digital-lab.less
+++ b/libs/modules/digital-lab.less
@@ -68,3 +68,21 @@
         color: @generous-green;
     }
 }
+
+.egg,
+.egg:focus,
+.egg:hover {
+    background: none;
+    border: none;
+    outline: none;
+    color: @white !important;
+    cursor: wait;
+}
+
+.egg:active {
+    background: none;
+    border: none;
+    outline: none;
+    color: @gray-7 !important;
+    cursor: wait;
+}
