--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -136,7 +136,8 @@ block content
 			.fullwidth-content
 				.dl--head
 					img(alt="", src="#{dir}images/ca-logo-hz-200px.svg")
-					h1(style="margin: 0; margin-top: 1rem;") Welcome to the digital&nbsp;lab
+					h1(style="margin: 0; margin-top: 1rem; position: relative;") Welcome to the digital&nbsp;lab&nbsp;
+						a.egg(href="http://funhtml5games.com?embed=flappy") #[span.i &#xe624;]
 
 		.fullwidth(style="background-color: #c2bdde; padding-bottom: 3.5rem;")
 			.fullwidth-content
