dev:change: Fixed ? colour in digital labs

--- a/libs/modules/digital-lab.less
+++ b/libs/modules/digital-lab.less
@@ -75,7 +75,7 @@
     background: none;
     border: none;
     outline: none;
-    color: @white !important;
+    color: rgba(0, 0, 0, 0) !important;
     cursor: wait;
 }
 
