dev:fix: Changed breakpoint to 710px so all icons show in portrait ipad

--- a/libs/modules/digital-lab.less
+++ b/libs/modules/digital-lab.less
@@ -3,7 +3,7 @@
     .tablet {
         display: none;
     }
-    @media screen and (min-width: @breakpoint-md) {
+    @media screen and (min-width: 710px) {
         .mobile {
             display: none;
         }
