dev:fix: Fixed search mockup sidebar

--- a/libs/jade/dev/site/search.jade
+++ b/libs/jade/dev/site/search.jade
@@ -156,7 +156,7 @@ block content
 							option Winter fuel payment
 							option Working tax credit
 
-			.blog-sidebar--updates(style="background-color:#a6d6ae; height:100%;")
+			.cards(style="background-color:#a6d6ae;")
 				.card-banner-top
 					p(style="color:#57486b;") Universal Credit
 				.card-text
