--- a/libs/jade/dev/site/resolver.jade
+++ b/libs/jade/dev/site/resolver.jade
@@ -66,13 +66,18 @@ block content
 		h2#h-get-help-with-your-complaint.js-ref Get help with your complaint
 		p The #[a Citizens Advice consumer helpline] can give you advice about how to complain to your supplier. You can contact the helpline on the phone, online or in writing.
 
-		h2 Complain in writing
-		p If you’d prefer to write directly to your supplier, this tool by Resolver helps you to create the most effective letter.
-		p The Resolver tool also:
+		h2 Get help with your complaint
+		p You can get advice from the #[a(href="https://www.citizensadvice.org.uk/consumer/get-more-help/if-you-need-more-help-about-a-consumer-issue/") Citizens Advice consumer helpline] about how to complain to your supplier.
+		p You can contact the helpline by emailing, phoning or writing to them. Helpline staff might tell you to phone or email your supplier, or they might recommend writing.
+		p Use our consumer #[a(href="https://www.citizensadvice.org.uk/consumer/template-letters/letters/") template letters] if you want to contact your energy supplier yourself. The templates will help you to write a complaint letter or email.
+		p You can also use the automated #[strong Resolver] complaining service, in association with MoneySavingExpert.com. The free Resolver service:
 		ul
-			li makes sure your complaint gets to the right person
-			li tracks the result so you know what’s happening
-			li resends your letter to someone more senior if necessary
+			li emails your complaint letter to your energy supplier
+			li uses its database to make sure your complaint reaches the right person
+			li tracks the result and lets you know how your complaint is progressing
+			li resends your complaint letter to someone more senior if necessary
+			li collects all correspondence into a dossier for the energy ombudsman
+		p To complain using Resolver, choose your energy supplier and then follow the instructions on their website. You’ll have to create a profile - give yourself some time to get all the details right.
 
 		.well--outline
 			label Choose your energy supplier
@@ -128,5 +133,5 @@ block content
 					option(value="Telecom Plus") Telecom Plus
 					option(value="Tonik Energy") Tonik Energy
 					option(value="Utilita") Utilita
-			button.btn.right-button-icon Write your complaint
+			button.btn.right-button-icon Complain using Resolver
 			//img.resolver(alt="", src="#{dir}images/logo-resolver.png", width="150")
