dev:change: Updating debt calculator mockup content

--- a/libs/jade/dev/debt-calculator/debt-calculator-3.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-3.jade
@@ -55,4 +55,8 @@ block content
 					th(scope="col", width="50%") How much you should offer
 			tbody
 
+		h2 What to do next
+		p Use your results to explain to your non-priority creditors how much you can pay towards your debts.
+		p You’ll need to give them other information, like a copy of your personal budget and a list of any other debts you have. #[a Find out what to include] if you’re not sure.
+
 		a.btn-secondary.restart-button-icon(href="debt-calculator.html") Restart
