dev: update search results mockup

--- a/libs/jade/dev/site/search.jade
+++ b/libs/jade/dev/site/search.jade
@@ -90,13 +90,14 @@ block content
 						li #[a Benefits]
 						li #[a Sick or disabled people and carers]
 
-				li.adviser-result
-					.heading
-						a Contractual sick pay
-					.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
-					ul.section
-						li #[a Workplace rights]
-						li #[a Sick pay]
+				li
+					.callout--adviser
+						.heading
+							a Contractual sick pay
+						.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
+						ul.section
+							li #[a Workplace rights]
+							li #[a Sick pay]
 
 			.pagination
 				ul
