dev: add issue button to template

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -513,6 +513,17 @@ div.tooltip:before {
     }
 }
 
+#issuereport {
+    display: inline-block;
+    float: right;
+    margin: 1.25rem .5rem 0 .5rem;
+    cursor: pointer;
+    background-color: @white;
+    &:hover, :focus {
+        background-color: @heritage-blue-lightest;
+    }
+}
+
 .index-row-1 {
     .col(3,5,780px);
     .index-col {
