--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -144,6 +144,7 @@ html.no-js
 		else
 			header.styleguide--header
 				.styleguide--header--content
+					a#issuereport.btn-white.btn-small(href="https://github.com/citizensadvice/cab-ui/issues/new") Give feedback
 					a(href="#{dir}index.html", style="border: none;")
 						img(src="#{dir}images/ca-logo-hz-white-280px.svg")
 					a#repo(href="https://github.com/citizensadvice/cab-ui", style="border: none;") v2.1.2
