change: Changed site notice to class instead of ID

--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -25,7 +25,7 @@
     }
 }
 
-#sitenotice {
+.sitenotice {
     background-color: @heritage-yellow-lighter;
     .sitenotice__content {
         .limit-width;
