fix: Defining font size in mega menu titles, to allow for use with other tags

--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -185,6 +185,7 @@ html[lang="en-SCT"] .main-nav {
 
     &__title {
         margin: .3em 0;
+        font-size: @base-size;
     }
 
     &__promo {
