fix: Paragraphs inside website notice are now inline-blocks

--- a/libs/jade/features/site-notice.jade
+++ b/libs/jade/features/site-notice.jade
@@ -11,7 +11,7 @@ block breadcrumbs
 		{title: "Features", href: dir + "index.html#Features"},
 		{title: title}])
 
-	#sitenotice
+	.sitenotice
 		.sitenotice__content
 			.badge Notice
 			| Website notices appear on all pages of the website.
