--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -36,6 +36,7 @@
         }
         p {
             margin: 0;
+            display: inline-block;
         }
         .badge {
             background-color: @heritage-yellow;
