--- a/libs/jade/dev/debt-calculator/debt-calculator-3.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-3.jade
@@ -64,3 +64,4 @@ block content
 		p You’ll need to give them other information, like a copy of your personal budget and a list of any other debts you have. #[a Find out what to include] if you’re not sure.
 
 		a.btn-secondary.restart-button-icon(href="debt-calculator.html") Restart
+		a.btn.btn-secondary.print-button-icon Print
