add: mockup of card for homepage search error

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -13,6 +13,7 @@
 @import "guide/simplegrid";
 @import "guide/swatches";
 @import "guide/icons";
+@import "guide/story";
 
 body {
     padding-top:        0px;
