--- a/libs/jade/dev/policy/income.jade
+++ b/libs/jade/dev/policy/income.jade
@@ -13,7 +13,7 @@ block sidebar
     include /template/sidebar-blog.jade
 
 block content
-    .fullwidth-yellow(style="margin-top: -1.25rem;")
+    .story-lead
         .fullwidth-content
             .flex-row
                 .col-md-12.col-sm-12(style="text-align: center;")
