--- a/libs/modules/cards.less
+++ b/libs/modules/cards.less
@@ -133,3 +133,26 @@
         }
     }
 }
+
+// For mockup of old home search
+.cards-branding--yellow_old {
+    .cards;
+    padding: 1rem;
+    margin-top: 0;
+    color: @heritage-blue;
+    background-color: @heritage-yellow;
+    padding-bottom: 0px;
+    //background: @heritage-yellow url('./images/local/magnifying-glass.svg') no-repeat bottom;
+    //background-position: center -50px;
+    //border: none;
+    h2 {
+        margin-top: 0;
+        font-size: @font-size-largest;
+        font-weight: @font-weight-boldest;
+        color: @heritage-blue;
+    }
+    img {
+        border: 0;
+        margin-bottom: -10px;
+    }
+}
